[package]
name = "io-tubes"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "provides functionality like pwntools tube for async io in rust"
repository = "https://github.com/AnsonYeung/io-tubes"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty-hex = "0.3.0"
tokio = { version = "1", features = ["full"] }
